# sentiment

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  1b5a2cc3d3f1_add_sources_table.py  61294d784b57_alter_text_body_to_text.py  90e105899e0d_alter_text_source_id_to_text.py  cf8f3a6ad3b6_add_keyword_sentiments_table.py
docs/: data_contracts.md
docs/schemas/: sentiment_result.schema.json  text_item.schema.json
src/api/: __init__.py  dependencies.py  main.py  schemas.py  store.py
src/api/routers/: __init__.py  auth.py  branding.py  contents.py  reports.py  security.py  sentiment.py  sources.py  system.py
src/api/services/: ingestion_runner.py  keyword_analytics.py  sentiment_runner.py  twitter_csv_importer.py
src/ingestion_service/: __init__.py  config.py  csv_client.py  db.py  ingestor.py  models.py  news_client.py  orm.py  repository.py  sql_repository.py
src/sentiment_service/: __init__.py  config.py  db.py  model.py  repository.py  worker.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
web/@/components/: login-form.tsx
web/app/: global.css  layout.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/components/: login-form.tsx  providers.tsx
web/components/dashboard/: overview.tsx
web/components/layout/: sidebar.tsx  top-bar.tsx
web/components/ui/: alert-dialog.tsx  button.tsx  switch.tsx  table.tsx
web/lib/: api.ts
(+7 files in other folders)
