[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-dash"
version = "0.1.0"
description = "Sentiment dashboard prototype services"
authors = [{name = "Sentiment Dash"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.29",
    "psycopg[binary]>=3.1.18",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "alembic>=1.13.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
